# cookiecutter-aws-codeartifact-python-project

./: .gitignore  README.rst  aws-codeartifact-python.drawio  cookiecutter.json  cookiecutterize.py  generate_example_project.py  release-history.rst  requirements.txt
aws_codeartifact_python_example-project/: .coveragerc  .gitignore  Makefile  README.rst  codebuild-config.json  count_code.py  git-branching-strategy.drawio  git-branching-strategy.drawio.html  pyproject.toml  setup.py
aws_codeartifact_python_example-project/aws_codeartifact_python_example/: core.py
aws_codeartifact_python_example-project/aws_codeartifact_python_example/tests/: helper.py
aws_codeartifact_python_example-project/docs/source/: conf.py
aws_codeartifact_python_example-project/tests/: test_core.py  test_import.py
{{ cookiecutter.package_name }}-project/: .coveragerc  README.rst  buildspec.yml  git-branching-strategy.drawio  git-branching-strategy.drawio.html  pyproject.toml  requirements-automation.txt
{{ cookiecutter.package_name }}-project/tests/: test_core.py
